fix double scroll issue, add animations on menu, delete expense. Add scroll-to-top function. Add confirmation and error toast.

--- a/src/pages/homeAuth/styles.module.scss
+++ b/src/pages/homeAuth/styles.module.scss
@@ -12,7 +12,7 @@
     background-color: #fff;
 }
 
-.menuImg{
+.menuImg {
     width: 30px;
     height: 30px;
     background-color: #fff;
@@ -25,7 +25,7 @@
     z-index: 2;
     transition: .4s;
 
-    &:hover{
+    &:hover {
         cursor: pointer;
         transform: scale(1.05);
     }
@@ -41,10 +41,10 @@
     background-color: rgba(0, 0, 0, 0.888);
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
-    z-index: 1;
+    z-index: 3;
 }
 
-.closeMenu{
+.closeMenu {
     position: absolute;
     top: 0;
     left: 0;
@@ -55,7 +55,7 @@
     z-index: 1;
     transition: .4s;
 
-    &:hover{
+    &:hover {
         cursor: pointer;
         transform: scale(1.05);
     }
@@ -90,7 +90,7 @@
     margin: 15px 0 0 0;
     gap: 15px;
     height: 100%;
-    
+
 }
 
 .menuLinks {
@@ -100,14 +100,15 @@
     padding: 5px;
     border-radius: 10px;
     text-align: center;
+    border: 1px solid #ffffff7e;
 
-    &:hover{
+    &:hover {
         background-color: $defaultBlue;
         transform: scale(1.05);
     }
 }
 
-.logoutBtn{
+.logoutBtn {
     background-color: transparent;
     color: red;
     border: 1px solid red;
@@ -118,19 +119,19 @@
     margin-bottom: 50px;
     font-size: 14px;
 
-    &:hover{
+    &:hover {
         color: #fff;
         transform: scale(1.05);
         cursor: pointer;
     }
 }
 
-.displayNone{
+.displayNone {
     display: none;
 }
 
-@media (max-width: 768px){
-    .asideMenu{
+@media (max-width: 768px) {
+    .asideMenu {
         height: 100%;
         position: fixed;
         left: 0;
@@ -138,7 +139,8 @@
         transition: .4s;
         background-color: #000;
     }
-    .mainContainer{
+
+    .mainContainer {
         justify-content: center;
         align-items: center;
         gap: 0;
